--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="space_4">4dp</dimen>
+    <dimen name="min_button">200dp</dimen>
+    <dimen name="space_16">16dp</dimen>
+    <dimen name="space_14">14dp</dimen>
+    <dimen name="space_12">12dp</dimen>
+    <dimen name="space_8">8dp</dimen>
 </resources>
