--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_films"
-        android:name="com.jsbs87.android.omtest.app.presentation.ui.films.MoviesFragment"
+        android:name="com.jsbs87.android.omtest.app.presentation.ui.movies.MoviesFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_movies" />
 
