--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#FF5722</color>
-    <color name="colorAccent">#4CAF50</color>
+    <color name="colorAccent">#FF5722</color>
     <color name="grey_light">#EAEAEA</color>
 </resources>
