--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,10 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.jsbs87.android.omtest.app.presentation.ui.detail.DetailMovieActivity">
+
     <item
-        android:id="@+id/search_action"
+        android:id="@+id/search_view"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="@string/search_title"
-        app:actionLayout="@layout/search_view_layout"
-        app:showAsAction="ifRoom|collapseActionView" />
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always" />
+
 </menu>
