--- a/app/src/main/res/layout/item_header_detail_movie.xml
+++ b/app/src/main/res/layout/item_header_detail_movie.xml
@@ -37,14 +37,16 @@
                 android:scaleType="center"
                 app:shapeAppearance="?attr/shapeAppearanceMediumComponent" />
 
-            <!--            <androidx.appcompat.widget.AppCompatTextView-->
-            <!--                android:id="@+id/title_movie_header"-->
-            <!--                style="@style/TextAppearance.AppCompat.Display1"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_margin="@dimen/activity_horizontal_margin"-->
-            <!--                android:textColor="@android:color/white"-->
-            <!--                tools:text="Movie" />-->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/title_movie_header"
+                style="@style/TextAppearance.AppCompat.Display1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:textColor="@android:color/white"
+                tools:text="Movie" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -65,10 +67,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/activity_horizontal_margin"
-                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                         android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                         android:textColor="@android:color/white"
-                        tools:text="Subtitle" />
+                        tools:text="Subtitle"
+                        android:textStyle="bold"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/year_movie_header"
@@ -78,7 +81,8 @@
                         android:layout_marginStart="@dimen/activity_horizontal_margin"
                         android:layout_marginEnd="@dimen/activity_horizontal_margin"
                         android:textColor="@android:color/white"
-                        tools:text="Year" />
+                        tools:text="Year"
+                        android:textStyle="bold"/>
 
                 </LinearLayout>
 
